feat:swagger documentation for parameter products
